# spacebar

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsc_errors.txt  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build_log.txt  build_log_2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  DatePicker.tsx  EditTaskModal.tsx  FocusBoard.tsx  Notes.tsx  Settings.tsx
src/lib/: tauriAdapter.ts
src/stores/: clipboardStore.ts  uiStore.ts
src/utils/: date.ts  dateUtils.ts  linkUtils.tsx
